<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cartTableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:isScrollContainer="true"
    android:stretchColumns="0"
    android:visibility="visible">

    <TableRow
        android:id="@+id/cartHeader"
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:layout_margin="5dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/cartHeaderModel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:gravity="clip_horizontal|left"
            android:maxLines="1"
            android:padding="18dip"
            android:text="@string/cart_model_label"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cartHeaderQty"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="18dip"
            android:text="@string/cart_qty_label"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cartHeaderPrice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:padding="18dip"
            android:text="@string/cart_price_label"
            android:textSize="16sp"
            android:textStyle="bold" />


    </TableRow>

    <TableRow
        android:id="@+id/cartRowTemplate"
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:layout_margin="5dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/cartModel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:gravity="clip_horizontal|left"
            android:maxLines="1"
            android:padding="18dip"
            android:text="@string/cart_model_test" />

        <TextView
            android:id="@+id/cartQty"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="18dip"
            android:text="@string/cart_qty_test" />

        <TextView
            android:id="@+id/cartPrice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:padding="18dip"
            android:text="@string/cart_price_test" />


    </TableRow>

    <TableRow
        android:id="@+id/cartTotalRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/cartTotalLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="18dip"
            android:text="@string/cart_total_label"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cartEmptySpace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible" />

        <TextView
            android:id="@+id/cartTotalPrice"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="18dip"
            android:text="@string/cart_price_test"
            android:textSize="20sp"
            android:textStyle="bold" />
    </TableRow>
</TableLayout>