<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20px"
    app:layout_marginBaseline="20px">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/reg_name_label"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:text="@string/reg_name" />

        <EditText
            android:id="@+id/reg_name"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/reg_address_label"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:text="@string/reg_address" />

        <EditText
            android:id="@+id/reg_address"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPostalAddress" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/reg_nif_label"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:text="@string/reg_nif" />

        <EditText
            android:id="@+id/reg_nif"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:maxLength="9" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/reg_card_type_label"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:text="@string/reg_card_type" />

        <EditText
            android:id="@+id/reg_card_type"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/reg_card_number_label"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:text="@string/reg_card_number" />

        <EditText
            android:id="@+id/reg_card_number"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:maxLength="16" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/reg_card_expiry_date_label"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:text="@string/reg_card_expiry_date" />

        <EditText
            android:id="@+id/reg_card_expiry_date"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date" />

    </TableRow>

    <TableRow
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:gravity="center|center_vertical">

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_button_text" />
    </TableRow>


</TableLayout>