<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginHorizontal="5dp">


    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:justifyContent="space_evenly"
        >

        <Button
            android:id="@+id/dashShowCart"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:text="@string/dash_btn_cart" />

        <Button
            android:id="@+id/dashShowPastOrders"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:text="@string/dash_btn_past_orders" />

    </com.google.android.flexbox.FlexboxLayout>

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:justifyContent="space_evenly">

        <Button
            android:id="@+id/dashScanBarCode"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:text="@string/dash_btn_scan"
            />

    </com.google.android.flexbox.FlexboxLayout>

</LinearLayout>
